--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div> <!-- ./skill-box-bar wow fadeInLeft -->
         <div class="skill-box-bar wow fadeInLeft" data-wow-duration="1.3s" data-wow-delay=".3s">
           <span class="bar-skiil"></span>
-          <span class="skill-name">Css / Css 3 / Media Query / Grid / Flexbox</span>
+          <span class="skill-name">Css / Css 3 / Grid / Flexbox</span>
         </div> <!-- ./skill-box-bar wow fadeInLeft -->
         <div class="skill-box-bar wow fadeInLeft" data-wow-duration="1.3s" data-wow-delay=".6s">
           <span class="bar-skiil"></span>
