--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <p class="p-text mt-2"><span class="abuot-name">Hi I'm Sabry Hamed </span>Lorem ipsum dolor sit amet
               consectetur adipisicing elit. Ex ea ad cumque
               natus porro expedita.</p>
-            <p class="p-text mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, numquam sit nobis
+            <p class="p-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, numquam sit nobis
               iusto ratione quos
               veniam ut optio quam cumque.</p>
             <div class="abuot-skiils t-center">
