--- a/index.html
+++ b/index.html
@@ -40,35 +40,36 @@
     </div> <!-- ./container -->
   </nav>
   <div class="content-nav">
-    <ul class="navbar  mb-0">
-      <li class="icon">
-        <span class="close"></span>
-        <span class="close"></span>
-      </li> <!-- ./icon -->
-      <li class="logo-imge mb-5">
-        <img src="images/personal/1.jpg" alt="Personal">
-      </li> <!-- ./imge -->
-      <li class="nav-list box-dark">
-        <span class="dark"></span>
-      </li>
-      <hr class="mb-5">
-      <li class="nav-list">
-        <a class="nav-link active" href="#" data-scroll="header">Home </a>
-      </li>
-      <li class="nav-list">
-        <a class="nav-link" href="#" data-scroll="abuot">About</a>
-      </li>
-      <li class="nav-list">
-        <a class="nav-link" href="#" data-scroll="skiils">Skiils</a>
-      </li>
-      <li class="nav-list">
-        <a class="nav-link" href="#" data-scroll="work">My Works</a>
-      </li>
-      <li class="nav-list">
-        <a class="nav-link" href="#" data-scroll="contact">Contact</a>
-      </li>
-    </ul> <!-- ./navbar -->
   </div> <!-- ./content-nav -->
+  
+  <ul class="navbar  mb-0">
+    <li class="icon">
+      <span class="close"></span>
+      <span class="close"></span>
+    </li> <!-- ./icon -->
+    <li class="logo-imge mb-5">
+      <img src="images/personal/1.jpg" alt="Personal">
+    </li> <!-- ./imge -->
+    <li class="box-dark">
+      <span class="dark"></span>
+    </li>
+    <hr class="mb-5">
+    <li class="nav-list">
+      <a class="nav-link active" href="#" data-scroll="header">Home </a>
+    </li>
+    <li class="nav-list">
+      <a class="nav-link" href="#" data-scroll="abuot">About</a>
+    </li>
+    <li class="nav-list">
+      <a class="nav-link" href="#" data-scroll="skiils">Skiils</a>
+    </li>
+    <li class="nav-list">
+      <a class="nav-link" href="#" data-scroll="work">My Works</a>
+    </li>
+    <li class="nav-list">
+      <a class="nav-link" href="#" data-scroll="contact">Contact</a>
+    </li>
+  </ul> <!-- ./navbar -->
   <!-- End Navbar -->
   <!-- Start Header -->
   <header class="py-5 bg-img block" id="header">
