--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <span class="close"></span>
       <span class="close"></span>
     </li> <!-- ./icon -->
-    <li class="logo-imge mb-5">
+    <li class="logo-imge my-5">
       <img src="images/personal/1.jpg" alt="Personal">
     </li> <!-- ./imge -->
     <li class="box-dark">
