--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <a class="nav-link" href="#" data-scroll="abuot">About</a>
     </li>
     <li class="nav-list">
-      <a class="nav-link" href="#" data-scroll="skiils">Skiils</a>
+      <a class="nav-link" href="#" data-scroll="skiils">Skills</a>
     </li>
     <li class="nav-list">
       <a class="nav-link" href="#" data-scroll="work">My Works</a>
@@ -126,7 +126,7 @@
   <!-- Start Sliiks -->
   <section class="skiils bg-img py-5 block" id="skiils">
     <div class="title-section">
-      <h2 class="t-center mb-5 heading-section">My Skiils</h2>
+      <h2 class="t-center mb-5 heading-section">My Skills</h2>
     </div><!-- ./title-section -->
     <div class="container">
       <div class="content-skiils">
@@ -286,7 +286,7 @@
               <h4 class="desc-pop">desc: <p class="p-text"> Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Dolores incidunt eaque, ea ipsa quisquam ducimus!</p>
               </h4>
-              <h4 class="my-2">skiils: <span class="skiils-pop"></span></h4>
+              <h4 class="my-2">Skills: <span class="skiils-pop"></span></h4>
               <a class="link-popup btn-style btn-effct t-center mt-lg-5" href="#" target="_blank">Viwe More</a>
             </div>
           </div>
@@ -314,10 +314,9 @@
             </div> <!-- ./box-content -->
           </div> <!-- ./content-contact6 -->
           <div class="mapouter wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="1.5s">
-            <div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas"
+            <div class="gmap_canvas"><iframe width="100%" height="100%" id="gmap_canvas"
                 src="https://maps.google.com/maps?q=cairo&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0"
-                scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-                href="https://www.online-timer.net">timrt</a></div>
+                scrolling="no" marginheight="0" marginwidth="0"></iframe></div>
           </div>
         </div> <!-- ./col-lg-6 -->
         <div class="col-lg-6">
